<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="2dp"
        android:background="@color/lightprimarycolor"
        android:id="@+id/ll1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthly_payment"
            android:id="@+id/monthly_Text" />

        <EditText
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/slider_text"
            android:gravity="center" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/values_are_estimated"
        android:id="@+id/textView26"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="12sp"
        android:layout_below="@+id/ll1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll2"
        android:layout_below="@+id/textView26"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:text="@string/mo"
            android:id="@+id/textView20"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:id="@+id/textView21"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/principal"
            android:id="@+id/textView25"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="Interest"
            android:id="@+id/textView23"
            android:layout_weight="1"
            android:gravity="center" />

        <TextView
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:id="@+id/textView24"
            android:layout_weight="1"
            android:gravity="center" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/no_data_avaliable"
        android:id="@+id/textView27"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>