<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/background_light"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/llLoanOutputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLoanTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:freezesText="true"
            android:text="@string/zero_amount"
            android:textColor="@android:color/primary_text_light"
            android:textSize="42sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/tvMonthlyPaymentVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:freezesText="true"
                android:text="@string/zero_amount"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginEnd="8dp"
                android:text="@string/monthly_payment"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">


            <TextView
                android:id="@+id/tvLoanInterestVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:freezesText="true"
                android:text="@string/zero_amount"
                android:textColor="@android:color/primary_text_light"
                android:textSize="19sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginEnd="8dp"
                android:text="@string/total_interestArabic"
                android:textColor="@android:color/primary_text_light"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">


            <TextView
                android:id="@+id/tvLoanTotalCostVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:freezesText="true"
                android:text="@string/zero_amount"
                android:textColor="@android:color/primary_text_light"
                android:textSize="19sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/total_loan_costAR"
                android:textColor="@android:color/primary_text_light"
                android:textSize="19sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoanInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLoanOutputs"
        android:layout_alignParentStart="false"
        android:layout_marginTop="20dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/etLoanAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight=".5"
                android:inputType="numberDecimal"
                android:nextFocusRight="@id/tvInterest" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:labelFor="@id/etLoanAmount"
                android:text="@string/loanAr"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/percent"
                android:textColor="@android:color/primary_text_light"

                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEditInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight=".2"
                android:inputType="numberDecimal"
                android:nextFocusRight="@id/etSalesTax" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:labelFor="@+id/etEditInterest"
                android:text="@string/interestAr"
                android:textColor="@android:color/primary_text_light"

                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/percent"
                android:textColor="@android:color/primary_text_light"

                android:textSize="18sp" />

            <EditText
                android:id="@+id/etSalesTax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight=".2"
                android:inputType="numberDecimal"
                android:nextFocusRight="@id/etTerm"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="0"
                android:labelFor="@+id/etSalesTax"
                android:text="@string/salestaxAr"
                android:textColor="@android:color/primary_text_light"

                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <RadioButton
                android:id="@+id/rbYears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/yearsAr" />

            <RadioButton
                android:id="@+id/rbMonths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/monthsAr" />

            <EditText
                android:id="@+id/etTerm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight=".2"
                android:inputType="numberDecimal"
                android:nextFocusRight="@id/etDownPayment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:labelFor="@+id/etTerm"
                android:text="@string/termAr"
                android:textColor="@android:color/primary_text_light"

                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llReductions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLoanInputs"
        android:layout_centerHorizontal="true"
        android:background="#f0f0f0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightprimarycolor"
            android:gravity="center"
            android:text="@string/reductions_optionalAR" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">

            <EditText
                android:id="@+id/etDownPayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight=".5"
                android:inputType="numberDecimal"
                android:labelFor="@+id/etDownPayment"
                android:nextFocusRight="@id/etTradeIn"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/downpaymentAr"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">


            <EditText
                android:id="@+id/etTradeIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight=".5"
                android:inputType="numberDecimal"
                android:nextFocusRight="@id/etFees"
                android:textAlignment="center" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:labelFor="@+id/etTradeIn"
                android:text="@string/tradeinAR"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">


            <EditText
                android:id="@+id/etFees"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight=".2"
                android:inputType="numberDecimal"
                android:labelFor="@+id/etFees"
                android:nextFocusRight="@id/btnCalculate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/feesAr"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>

    <ImageButton
        android:id="@+id/reseticon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llReductions"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"

        android:layout_marginTop="-2dp"
        android:layout_marginEnd="181dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:src="@drawable/ic_reset" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/llReductions"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="149dp"

        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/calculateAr"
        android:textColor="#ffffff"
        android:textSize="16sp" />




</RelativeLayout>
