<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00DDC1"
    android:paddingLeft="5dp"
    android:paddingTop="5dp"
    android:paddingRight="5dp"
    android:paddingBottom="5dp"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/llLoanOutputs"
        android:layout_width="485dp"
        android:layout_height="185dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLoanTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:freezesText="true"
            android:text="@string/zero_amount"
            android:textColor="@android:color/primary_text_light"
            android:textSize="30dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:id="@+id/tvMonthlyPaymentVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:freezesText="true"
                android:text="@string/zero_amount"
                android:textColor="@color/white"
                android:textSize="19dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:layout_marginEnd="8dp"
                android:text="@string/monthly_payment"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">


            <TextView
                android:id="@+id/tvLoanInterestVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:freezesText="true"
                android:text="@string/zero_amount"
                android:textColor="@color/white"
                android:textSize="19dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_marginEnd="8dp"
                android:text="@string/total_interestArabic"
                android:textColor="@android:color/primary_text_light"
                android:textSize="19sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">


            <TextView
                android:id="@+id/tvLoanTotalCostVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:freezesText="true"
                android:text="@string/zero_amount"
                android:textColor="@color/white"
                android:textSize="19dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/total_loan_costAR"
                android:textColor="@android:color/primary_text_light"
                android:textSize="19sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLoanInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLoanOutputs"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/etLoanAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:layout_weight=".5"
                android:background="@drawable/rounded_edittextwhite"
                android:inputType="numberDecimal"
                android:nextFocusRight="@id/tvInterest"
                android:padding="10dp"
                android:hint="500000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:labelFor="@id/etLoanAmount"
                android:text="@string/loanAr"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">


            <EditText
                android:id="@+id/etEditInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"

                android:textAlignment="center"
                android:layout_weight=".2"
                android:background="@drawable/rounded_edittextwhite"
                android:inputType="numberDecimal"

                android:padding="10dp"
                android:hint="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:labelFor="@+id/etEditInterest"
                android:text="@string/interestAr"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingTop="10dp"
            android:paddingEnd="8dp">


            <RadioButton
                android:id="@+id/rbYears"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:checked="true"
                android:text="@string/yearsAr" />

            <RadioButton
                android:id="@+id/rbMonths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthsAr" />

            <EditText
                android:id="@+id/etTerm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight=".2"
                android:background="@drawable/rounded_edittextwhite"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:nextFocusRight="@id/etDownPayment"

                android:padding="10dp"
                android:hint="20" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:labelFor="@+id/etTerm"
                android:text="@string/termAr"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llReductions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llLoanInputs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingRight="4dp">


            <EditText
                android:id="@+id/etDownPayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight=".5"
                android:background="@drawable/rounded_edittextwhite"
                android:inputType="numberDecimal"
                android:labelFor="@+id/etDownPayment"
                android:padding="10dp"
                android:hint="50000"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/downpaymentAr"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="4dp"
            android:paddingTop="10dp"
            android:paddingRight="4dp">


            <EditText
                android:id="@+id/etFees"
                android:layout_width="0dp"
                android:hint="50000"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight=".2"
                android:background="@drawable/rounded_edittextwhite"
                android:inputType="numberDecimal"
                android:labelFor="@+id/etFees"
                android:nextFocusRight="@id/btnCalculate"
                android:textAlignment="center"
                android:padding="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/feesAr"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="320dp"
        android:layout_height="127dp"
        android:layout_below="@+id/llReductions"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:layout_marginTop="50dp"

        app:backgroundTint="@color/white"
        android:background="@drawable/rounded_edittextwhite_btn"
         android:text="@string/calculate"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp" />


</RelativeLayout>
